# rust-kafka-redis

./: Cargo.toml  docker-redis.yml
src/: consumer.rs  handler.rs  lib.rs  main.rs  models.rs  processor.rs  producer.rs  redis.rs  state.rs
tests/: message_testing.rs
