[package]
name = "rust_kafka_streams"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.36.2"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
axum = { version = "0.7.5", features = ["default"] }
chrono = "0.4.38"
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
